oxidite-macros/tests/ui/fail_email_non_string.rs
#[derive(oxidite_macros::Model)]
struct Bad {
    id: i64,
    #[validate(email)]
    email: i64,
}

fn main() {}
